<resources>
    <string name="app_name">Convarter</string>
    <array name="main_list">
        <item>Edit Gamemap With Javascript</item>
        <item>Customize Flat Worlds</item>
        <item>Set 2 Blocks Coexist</item>
        <item>Settings</item>
        <item>About (Dont Click)</item>
        <item>Test Toolss</item>
    </array>
    <string name="setup_nextstep">Next</string>
    <string name="setup_finish">Go</string>
    <string name="setup_cancel">Cancel</string>
    <string name="setup_cancelconfirm">Cancel?</string>
    <string name="setup_fmaps_title0">Select a MinecraftPE game map:</string>
    <string name="setup_fmaps_nomap">Can\'t find any game maps in MinecraftPE\'s external maps folder. Have you set MinecraftPE to use external storage?</string>
    <string name="setup_fmaps_nomap_explain" translatable="false">To let MinecraftPE use external storage, open it, click \"Settings\" from it\'s home screen, select \"Profile\" on the left panel, then scroll down the right pane and chang \"File Storage Location\" to \"External\".</string>
    <string name="setup_fmaps_nofolder">MinecraftPE\'s gamemap folder can\'t be found. Have you really installed MinecraftPE from Play Store or Amazon?</string>
    <string name="setup_fmaps_noperm">It seems that Convarter was not permitted to read or write external storage. In order to use, please go to Settings or phone management apps to allow Convarter to use permission \"Storage\".</string>
    <string name="setup_fmaps_date_unknown">Unknown</string>
    <string name="setup_fmaps_lastplayed">Last played: %1$s</string>
    <string name="setup_fjs_nojs">You haven\'t imported any scripts yet~ Click the \"Add\" button to add one~</string>
    <string name="setup_fjs_about">Convarter can directly detect any scripts under /sdcard/%1$s. Just place scripts there, then you won\'t need to import.</string>
    <string name="setup_fjs_addfile">Pick from storage</string>
    <string name="setup_fjs_addclip">Import from clipboard</string>
    <string name="filepicker_parentdir">Up..</string>
    <string name="filepicker_sortby">Sort by...</string>
    <string name="filepicker_refresh">Refresh</string>
    <array name="filepicker_sortby_list">
        <item>Name</item>
        <item>Newer first</item>
        <item>Older first</item>
    </array>
    <string name="setup_fjs_importhowto">How to import it...</string>
    <string name="setup_fjs_importhowtoexplain" translatable="false">By selecting \"Copy\", the chosen script will be copied to Convarter\'s library, then any loss or damage to the orginal file won\'t influence the copied script.\n\nBy selecting \"Link\", Convarter will only remember where the script is, and read it out right before every time you use it. In this way, you don\'t have to re-import it after editing it.\n\nWell just click \"Copy\" if you didn\'t get it...</string>
    <string name="setup_fjs_btncopy" translatable="false">Copy</string>
    <string name="setup_fjs_btnlink" translatable="false">Link</string>
    <string name="setup_fjs_importhowto_content" translatable="false">By clicking \"Copy\", the selected script will be copied to Convarter\'s library. By clicking \"Link\" it would be linked to.</string>
    <string name="setup_fjs_importhowto_showmore" translatable="false">What\'s the difference?</string>
    <string name="setup_fjs_delete">Delete</string>
    <string name="setup_js_delconfirm">Delete this script?</string>
    <string name="setup_fjs_tips">Tips</string>
    <string name="setup_fjs_errcantread">Failed: file can\'t be read.</string>
    <string name="setup_fjs_errdir">Failed: scripts directory can\'t be created.</string>
    <string name="setup_fjs_errcpy">Failed: file can\'t be copied.</string>
    <string name="setup_fjs_succ">Successfully imported.</string>
    <string name="setup_fjs_errwtf">Well you don\'t need to import it :(</string>
    <string name="setup_fjs_title">Select a Javascript</string>
    <string name="runjs_title_running">In progress...</string>
    <string name="runjs_title_failed">😥Failed..</string>
    <string name="runjs_title_succ">😘 Finished~</string>
    <string name="runjs_input_prompt">Please enter something:</string>
    <string name="runjs_input_hint">Then click Enter</string>
    <string name="runjs_btnenter">Enter</string>
    <string name="runjs_logcat_firstline">Script output will be shown here.\n</string>
    <string name="runjs_btnclose">Close</string>
    <string name="runjs_erropendb">Error: can\'t load database /db from selected gamemap.</string>
    <string name="runjs_erropendat">Error: can\'t open level.dat of the gamemap.</string>
    <string name="runjs_errsavedb">Error: Progress can\'t be saved to /db.</string>
    <string name="runjs_errsavedat">Error: level.dat can\'t be modified.</string>
    <string name="runjs_abort_msg">Stop the script and return?</string>
    <string name="global_yes">Yes</string>
    <string name="global_no">No</string>
    <string name="global_confirm">Confirm</string>
    <string name="global_cancel">Cancel</string>
    <string name="setup_fjso_cachetitle">Max cached Chunks:</string>
    <string name="setup_fjso_chunkexplain">A \"Chunk\" in Minecraft is a certain region of gamemap containing all blocks within, both width and length (x and z directions) are 16, and height varies between 16~256 depending how tall you build. They are stored in your device\'s storage. Some of them can be temporarily stored in memory to accelerate read and write operations. We can store an amount of chunks up to the limit you set above. If the number is too much the app will crash, if it\'s too little the process will be very slow. Usually you should leave the default value unchanged.</string>
    <string name="setup_fjso_title">Advanced</string>
    <string name="global_dontaskagain">Don\'t ask again.</string>
    <string name="settings_noask_jsothers">Don\'t show advanced options of javascript</string>
    <string name="settings_noask_reset">Reset all \"Don\'t show again\"s</string>
    <string name="setup_fjso_opttitle">Optimization level of javascript:</string>
    <string name="setup_fjso_optnoopt">Level -1: no optimization</string>
    <string name="setup_fjso_optlvl">Level %1$d</string>
    <string name="act_title_runjs">Javascript</string>
    <string name="act_title_moflat">Modify flat world layers</string>
    <string name="setup_fmaps_create">Create new game map</string>
    <string name="act_title_createlevel">Create new level</string>
    <string name="createlevel_name">Name:</string>
    <string name="createlevel_explain">This will create an empty flat game map in creative mode. You can then modify flat layers.</string>
    <string name="createlevel_namehint">My world</string>
    <string name="global_succ">Done.</string>
    <string name="editlayers_override">Override existing areas (won\'t break your buildings)</string>
    <string name="editlayers_entry_text" translatable="false">%1$dx %2$s</string>
    <string name="editlayers_entry_text2" translatable="false">%1$d:%2$d %3$s</string>
    <string name="global_lang">default</string>
    <string name="editlayers_help">"Click to edit. Drag block icon to sort, "</string>
    <string name="editlayers_cantdelete">There should be at least three layers.</string>
    <string name="editlayers_title_add">Add a layer</string>
    <string name="editlayers_title_edit">Edit this layer</string>
    <string name="editlayer_id">Block ID:</string>
    <string name="editlayer_data">Data(0~15):</string>
    <string name="editlayer_count">Amount:</string>
    <string name="editlayer_pick">Pick...</string>
    <string name="editlayer_err_id">Block ID should be 0~255.</string>
    <string name="editlayer_err_data">Block data should be 0~15.</string>
    <string name="editlayer_note_amount">Amount of all blocks should be 0~128, make sure it won\'t exceed the limit.</string>
    <string name="editlayer_err_amount">Amount of block should be larger than 0.</string>
    <string name="pickblock_hint">ID or name...</string>
    <string name="editlayer_diahelp_title">How to...</string>
    <string name="editlayer_diahelp_text">It\'s easy to use, just as shown above.</string>
    <string name="global_noresult">No result.</string>
    <string name="pickblock_entry_detail">ID: %1$d, %2$s</string>
    <string name="editlayer_done">Done.</string>
    <string name="test_title">Test Tools</string>
    <string name="runjs_nonflat">This is not a flat world, layers are not loaded. Editing this type of game map may leave huge holes as we won\'t generate terrian.</string>
    <string name="runjs_flatloaded">Flat world layers loaded.</string>
    <string name="runjs_flatcorrupt">This is a flat world but we failed loading flat layers.</string>
    <string name="editlayers_nonflat">This is not a flat map at all.</string>
    <string name="editlayers_corrupt">Failed loading flat layers.</string>
    <string name="setup_fjs_genflat">Generate flat layers for new chunks</string>
    <string name="pickblock_title">Pick A Block</string>
    <string name="main_welcome">Hello~ This app is still an experimental one, and may not work on game maps that are too old or too new, Please backup your game maps before using! And we may add features such as 3D visual editing in the future, well who knows~ Meow~ Because of Minecraft itself\'s problem, editing superflat only takes effect in case you fully quit the game before using this feature. And...Well,javascript feature crashes randomly, so close your eyes and pray.</string>
    <string name="editlayers_loading">Loading...</string>
    <string name="editlayers_waitloaded">Please wait until layers loaded.</string>
    <string name="editlayers_disadvantage">Though all your modifications to existing areas (placing, replacing or breaking) won\'t be overridden, in case you add more layers, they may get buried under new layers. If you add sands they may fall and destroy blocks beneath. And if you reduced layers, flowers and circuits above may not survive. So think twice and have your map backed up before running this app!!!</string>
    <string name="editlayers_version_old">Your map is for Minecraft version below 1.2. Opening it with newer Minecraft would reset layers to default. You can then however, run this feature again.</string>
    <string name="about_ckupdate">Check for update</string>
    <string name="about_git">Open in Github</string>
    <string name="coexist_blockat">Block at</string>
    <string name="coexist_blockx">x=</string>
    <string name="coexist_blocky">y=</string>
    <string name="coexist_blockz">z=</string>
    <string name="coexist_applyarea">Apply to a 14x14 area</string>
    <string name="coexist_block">Block %1$d: </string>
    <string name="coexist_blockid">id=</string>
    <string name="coexist_blockdata">data=</string>
    <string name="coexist_blocksswap">Swap</string>
    <string name="coexist_deletechunk">Delete involved Chunk</string>
    <string name="coexist_save">Save</string>
    <string name="coexist_warn">Warning: Only use this on a test gamemap!\nCreate one using Convarter\nOr use a map opened by MCPE 1.5+</string>
</resources>
