<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="index"
            type="int" />

        <variable
            name="blockid"
            type="Integer" />

        <variable
            name="blockdata"
            type="Integer" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@{@string/coexist_block(index)}" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pick"
                android:tag="@{index}"
                android:text="@string/editlayer_pick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/coexist_blockid" />

                <EditText
                    android:id="@+id/et_blockid"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:text="@{blockid==null?``:Integer.toString(blockid)}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/coexist_blockdata" />

                <EditText
                    android:id="@+id/et_blockdata"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:text="@{blockdata==null?``:Integer.toString(blockdata)}" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>